--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,118 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    font-family: "Raleway";
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* CurrentWeather Component styles */
+.current--weather {
+    background: #1E213A;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.icon{
-  background-color: aqua;
-  font-size: 32px;
+.search--location form {
+    color: #E7E7EB;
+    padding: 20px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.color--one {
+    background-color: #6E707A !important;
+}
+
+.search--location input {
+    color: #E7E7EB;
+    background-color: #6E707A;
+    width: 150px;
+    height: 40px;
+    border: transparent;
+    padding: 10px 20px;
+}
+
+.search--location input::placeholder {
+    color: #E7E7EB;
+}
+.search--location input:focus {
+    outline: none;
+}
+
+.search--location button {
+    background-color: #6E707A;
+    border: transparent;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.location--icon {
+    color: #E7E7EB;
+    font-size: 22px;
+    text-align: center;
+}
+
+.current--weather--icon {
+    height: 250px;
+    width: 200px;
+    border: 1px solid black;
+    margin: 0 auto;
+    margin-top: 50px;
+    display: flex;
+    align-self: center;
+}
+
+.today {
+    color: #A09FB1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.temp--data {
+    font-size: 36px;
+    margin-bottom: 0px;
+}
+
+.temp--data span {
+    color: #FFF;
+    font-weight: 500;
+    font-size: 120px;
+}
+
+.weather--description {
+    font-size: 28px;
+}
+
+.date {
+    font-size: 12px;
+}
+
+.location {
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    line-height: 22px;  
+}
+
+.location--icon2 {
+    font-size: 20px;
+    margin-right: 5px;
+}
+
+@media only screen and (min-width: 768px) {
+    .search--location input {
+        width: 250px;
+        height: 40px;
+    }
+    .current--weather--icon {
+        width: 250px;
+        height: 250px;
+    }
+    
 }
