--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
 .app--container {
     display: grid;
+    overflow-y: hidden;
+}
+
+.weather--details {
+    background: #100E1D;
 }
 
 @media only screen and (min-width: 1025px) {
     .app--container {
         grid-template-columns: 1fr 2fr;
+    }
+    .weather--details {
+        height: 100vh;
     }
     
 }
