--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,36 +1,41 @@
 .weather--forecast {
     background: #100E1D;
     display: grid;
-    grid-template-columns: repeat(auto-fit, 140px);
-    grid-auto-rows: 200px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-auto-rows: 150px;
     justify-content: center;
-    padding: 50px;
+    padding: 20px;
     gap: 30px;
 }
 
 .weather--card {
     width: 100%;
     margin: 0 auto;
-    background-color: #6E707A;
-    font-size: 16px;
+    background-color: #1E213A;
+    color: #FFF;
+    font-size: 10px;
     display: flex;
     flex-direction: column;
     justify-items: center;
     align-items: center;
     font-weight: 500;
-    line-height: 18px;
+    line-height: 2px;
 }
 .weather--card h4 {
-    margin-top: 18px;
-    font-size: 16px;
+    margin-top: 12px;
+    font-size: 12px;
     color: #FFF;
+}
+.weather--card p {
+    font-size: 12px;
+    color: #FFF;
+    padding: 0 5px;
 }
 
 .weather--icon {
     width: 55px;
     height: 60px;
     border: 1px solid black;
-    margin-top: 10px;
 }
 .temp {
     margin-top: 15px;
@@ -44,13 +49,9 @@
 }
 
 @media only screen and (min-width: 600px) {
-    .weather--forecast {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
+    
 }
 
 @media only screen and (min-width: 1400px) {
-    .weather--forecast {
-        grid-template-columns: repeat(6, 1fr);
-    }
+    
 }
