--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -20,6 +20,7 @@
     align-items: center;
     font-weight: 500;
     line-height: 2px;
+    border-radius: 5px;
 }
 .weather--card h4 {
     margin-top: 12px;
