--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
     height: 40px;
     border: transparent;
     padding: 10px 20px;
+    border-radius: 5px;
 }
 
 .search--location input::placeholder {
