--- a/src/CurrentWeatherDetails.css
+++ b/src/CurrentWeatherDetails.css
@@ -5,6 +5,7 @@
     gap: 20px;
     justify-content: center;
     padding: 20px;
+    border-radius: 5px;
     
 }
 
@@ -21,6 +22,7 @@
     gap: 20px;
     justify-content: center;
     padding: 20px;
+    border-radius: 5px;
 }
 
 .card--two .card {
