--- a/src/css/weatherForecast.css
+++ b/src/css/weatherForecast.css
@@ -1,19 +1,9 @@
-.weather--forecast {
-    background: #100E1D;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-    grid-auto-rows: 150px;
-    justify-content: center;
-    padding: 20px;
-    gap: 30px;
-}
-
 .weather--card {
-    width: 100%;
-    margin: 0 auto;
     background-color: #1E213A;
     color: #FFF;
     font-size: 10px;
+    width: 80px;
+    height: 120px;
     display: flex;
     flex-direction: column;
     justify-items: center;
@@ -32,19 +22,25 @@
     color: #FFF;
     padding: 0 5px;
 }
+.weather--card .min {
+    color: #A09FB1;
+
+}
 
 .weather--icon {
     width: 55px;
     height: 60px;
-    border: 1px solid black;
-}
-.temp {
-    margin-top: 15px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+}
+.weather--icon img {
+    width: 100%;
+    height: 100%;
 }
 
-.humidity-windspeed {
+.temp {
+    margin-top: 15px;
     display: flex;
     justify-content: space-around;
 }
