--- a/src/App.css
+++ b/src/App.css
@@ -9,24 +9,59 @@
 }
 
 .forecast {
-    display: flex;
     margin: 32px;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+    grid-auto-rows: 120px;
+    align-items: center;
+    justify-items: center;
+    gap: 20px;
+}
+
+@media only screen and (max-width: 500px) {
+    .forecast {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+        grid-auto-rows: 120px;
+        align-items: center;
+        justify-items: center;
+        gap: 20px;
+    }
+}
+
+.heading {
+    font-size: 24px;
+    font-weight: 700;
+    padding: 0 32px;
+    color: #E7E7EB;
 }
 
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 768px) {
     .app--container {
+        max-width: 768px;
+        margin: 0 auto;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+
+    .app--container {
+        max-width: 1024px;
+        margin: 0 auto;
         grid-template-columns: 1fr 2fr;
     }
+
     .weather--details {
         height: 100vh;
     }
+
     .search--location {
         max-width: 33.33%;
     }
+
     body {
         overflow-y: hidden;
     }
-    
+
 }
