--- a/src/css/currentWeatherDetails.css
+++ b/src/css/currentWeatherDetails.css
@@ -41,7 +41,7 @@
     grid-auto-rows: 180px;
     gap: 20px;
     justify-content: center;
-    padding: 32px;
+    padding: 12px 32px;
     border-radius: 5px;
     
 }
@@ -55,10 +55,10 @@
 .card--two {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    grid-auto-rows: 120px;
+    grid-auto-rows: 140px;
     gap: 20px;
     justify-content: center;
-    padding: 32px;
+    padding: 12px 32px;
     border-radius: 5px;
 }
 
@@ -66,4 +66,8 @@
     background: #1E213A;
     width: 100%;
     margin: 0 auto;
+}
+
+.progress-bar {
+    padding: 10px 20px;
 }
